2011-11-30  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed propective build fix for Qt/Windows part 2 after r101477.

        * wtf/ThreadSpecific.h: Fix the OS(WINDOWS) defines for the friend declaration for ThreadSpecific<T>::Data

2011-11-30  Simon Hausmann  <simon.hausmann@nokia.com>

        Unreviewed propective build fix for Qt/Windows after r101477.

        * wtf/ThreadSpecific.h: Use OS(WINDOWS) for declaring "destructor", as it's
        only referenced from within another OS(WINDOWS) section.

2011-11-30  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed speculative buildfix after r101457.

        * assembler/MIPSAssembler.h:
        (JSC::MIPSAssembler::readCallTarget):
        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::readCallTarget):

2011-11-30  Andrew Wason  <rectalogic@rectalogic.com>

        Replace Qt QThread threading back-end with pthread/Win32 threading back-ends
        https://bugs.webkit.org/show_bug.cgi?id=72155

        Reviewed by Simon Hausmann.

        Use ThreadingPthreads and ThreadingWin instead of ThreadingQt.

        * heap/MachineStackMarker.cpp:
        * wtf/MainThread.cpp:
        (WTF::initializeMainThread):
        * wtf/Platform.h:
        * wtf/ThreadSpecific.h: Drop QThreadStorage related code.
        (WTF::::destroy):
        * wtf/ThreadingPrimitives.h:
        * wtf/qt/MainThreadQt.cpp: Drop Qt specific isMainThread().
        (WTF::initializeMainThreadPlatform): Initialize MainThreadInvoker on main thread to avoid infecting secondary thread with QAdoptedThread.
        (WTF::scheduleDispatchFunctionsOnMainThread):
        * wtf/qt/ThreadingQt.cpp: Removed.
        * wtf/wtf.pro:

2011-11-30  Csaba Osztrogonác  <ossy@webkit.org>

        MacroAssemblerARM does not implement readCallTarget
        https://bugs.webkit.org/show_bug.cgi?id=73413

        Based on Filip Pizlo's patch.

        Buildfix. Rubber-stamped by Gabor Loki.

        * assembler/ARMAssembler.h: