@@ -128,6 +128,10 @@ typedef struct tagTHREADNAME_INFO {
 
 void initializeCurrentThreadInternal(const char* szThreadName)
 {
+#if COMPILER(MINGW)
+    // FIXME: Implement thread name setting with MingW.
+    UNUSED_PARAM(szThreadName);
+#else
     THREADNAME_INFO info;
     info.dwType = 0x1000;
     info.szName = szThreadName;
@@ -138,6 +142,7 @@ void initializeCurrentThreadInternal(const char* szThreadName)
         RaiseException(MS_VC_EXCEPTION, 0, sizeof(info)/sizeof(ULONG_PTR), reinterpret_cast<ULONG_PTR*>(&info));
     } __except (EXCEPTION_CONTINUE_EXECUTION) {
     }
+#endif
 }
 
 static Mutex* atomicallyInitializedStaticMutex;
